--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "create": "node index.js create",
     "update": "node index.js update",
     "destroy": "node index.js destroy",
-    "score": "node index.js score"
+    "score": "node index.js score",
+    "Gaspare": "node index.js hey yall whats happening"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "nanoid": "^3.3.6"
   }
 }
